force-app/main/default/objects/Contract/fields/SIR_FechaCBP__c.field-meta.xml
<CustomField>
    <fullName>SIR_FechaCBP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha CBP</label>
    <type>Date</type>
</CustomField>