force-app/main/default/objects/Contract/fields/SIR_FechaCura__c.field-meta.xml
<CustomField>
    <fullName>SIR_FechaCura__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha cura</label>
    <type>Date</type>
</CustomField>