force-app/main/default/objects/Contract/fields/SIR_FechaEntradaPP__c.field-meta.xml
<CustomField>
    <fullName>SIR_FechaEntradaPP__c</fullName>
    <description>Fecha entrada PP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha entrada PP</label>
    <type>Date</type>
</CustomField>