force-app/main/default/objects/Contract/fields/SIR_FechaEstimadaSalidaPP__c.field-meta.xml
<CustomField>
    <fullName>SIR_FechaEstimadaSalidaPP__c</fullName>
    <description>Fecha estimada salida Probation Period</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha estimada salida PP</label>
    <type>Date</type>
</CustomField>