force-app/main/default/objects/Contract/fields/SIR_FechaPaseContable__c.field-meta.xml
<CustomField>
    <fullName>SIR_FechaPaseContable__c</fullName>
    <description>Fecha de pase a contable del proceso</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha pase a contable</label>
    <type>Date</type>
</CustomField>