force-app/main/default/objects/Contract/fields/SIR_ImpactoDoD__c.field-meta.xml
<CustomField>
    <fullName>SIR_ImpactoDoD__c</fullName>
    <description>Impacto DoD (Impacto Default)</description>
    <label>Impacto DoD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>