force-app/main/default/objects/Contract/fields/SIR_IndicadorOtrasCarencias__c.field-meta.xml
<CustomField>
    <fullName>SIR_IndicadorOtrasCarencias__c</fullName>
    <label>Indicador Otras Carencias</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>