force-app/main/default/objects/Contract/fields/SIR_IndicadorVtoCtaCredito__c.field-meta.xml
<CustomField>
    <fullName>SIR_IndicadorVtoCtaCredito__c</fullName>
    <label>Indicador Vto Cta de Crédito</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>