force-app/main/default/objects/Contract/fields/SIR_MarcaIMPA__c.field-meta.xml
<CustomField>
    <fullName>SIR_MarcaIMPA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marca IMPA</label>
    <length>25</length>
    <type>Text</type>
</CustomField>