force-app/main/default/objects/Contract/fields/SIR_PeriocidadReciboDesc__c.field-meta.xml
<CustomField>
    <fullName>SIR_PeriocidadReciboDesc__c</fullName>
    <formula>BLANKVALUE(SIREC__SIREC_fld_periodicidadRecibo__r.SIREC__SIREC_fld_Descripcion__c, SIR_PeriodicidadRecibo__r.SIR_Descripcion__c)</formula>
    <label>Periodicidad recibos</label>
    <type>Text</type>
</CustomField>