force-app/main/default/objects/Contract/fields/SIR_PeriodicidadRecibo__c.field-meta.xml
<CustomField>
    <fullName>SIR_PeriodicidadRecibo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Periodicidad Recibo Catálogo</label>
    <referenceTo>SIR_CatalogoSirec__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>