force-app/main/default/objects/Contract/fields/SIR_Prioridad__c.field-meta.xml
<CustomField>
    <fullName>SIR_Prioridad__c</fullName>
    <label>Prioridad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>