force-app/main/default/objects/Contract/fields/SIR_SuperaUmbralRelativo__c.field-meta.xml
<CustomField>
    <fullName>SIR_SuperaUmbralRelativo__c</fullName>
    <description>Supera umbral relativo: si/no (%)</description>
    <label>Supera umbral relativo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>