force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_Asunto__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_Asunto__c</fullName>
    <description>Asunto</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Asunto</label>
    <type>TextArea</type>
</CustomField>