force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_calificacionContable__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_calificacionContable__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Calificación Contable</label>
    <length>50</length>
    <type>Text</type>
</CustomField>