force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_ciclosImpago__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_ciclosImpago__c</fullName>
    <description>cantidad de ciclos de impago que ha pasado este contrato</description>
    <label>Ciclos de Impago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>