force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_contratoDeuda__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_contratoDeuda__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Codigo Contrato en Deuda</description>
    <label>Cod Contrato en Deuda</label>
    <type>Checkbox</type>
</CustomField>