force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_deudaVencidaImpagada__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_deudaVencidaImpagada__c</fullName>
    <label>Deuda vencida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>