force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_diasImpagados__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_diasImpagados__c</fullName>
    <description>días de impago en el contrato</description>
    <label>Días Impagados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>