force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_diasMora__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_diasMora__c</fullName>
    <description>Codigo Días de Mora</description>
    <label>Cod Días Mora</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>