force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_fechaBaja__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_fechaBaja__c</fullName>
    <description>Fecha de baja</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de Baja</label>
    <type>Date</type>
</CustomField>