force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_fechaCancelacion__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_fechaCancelacion__c</fullName>
    <description>Fecha cancelación del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Cancelación</label>
    <type>Date</type>
</CustomField>