force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_fechaConstitucion__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_fechaConstitucion__c</fullName>
    <description>fecha de constitución del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de Constitución</label>
    <type>Date</type>
</CustomField>