force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_fechaImpago__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_fechaImpago__c</fullName>
    <description>fecha del primer día de impago del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha del Impago</label>
    <type>Date</type>
</CustomField>