force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_fechaVencimiento__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_fechaVencimiento__c</fullName>
    <description>fecha de vencimiento del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de Vencimiento</label>
    <type>Date</type>
</CustomField>