force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_formulaEntidad__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_formulaEntidad__c</fullName>
    <description>Entidad Formula</description>
    <formula>RIGHT( SIREC__SIREC_fld_iuc__c, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entidad Formula</label>
    <type>Text</type>
</CustomField>