force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_ID_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_ID_Cuenta__c</fullName>
    <description>Identificador de la cuenta en SIREC ( ID_CUENTA)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cod ID Cuenta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>