force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_importeImpagado__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_importeImpagado__c</fullName>
    <description>Importe cuota del contrato</description>
    <label>Importe cuota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>