force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_indicadorDeuda__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_indicadorDeuda__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicador deuda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>