force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_indImpago__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_indImpago__c</fullName>
    <description>Indicador de Impago</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicador de Impago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>