force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_motivoBaja__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_motivoBaja__c</fullName>
    <label>Motivo de Baja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAN</fullName>
                <label>CANCELADO DEFINITIVO</label>
            </value>
            <value>
                <fullName>DEV</fullName>
                <label>DEVUELTO</label>
            </value>
            <value>
                <fullName>REG</fullName>
                <label>REGULARIZADO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>