force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_numContrato__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_numContrato__c</fullName>
    <description>identificador del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Cod Nº de Contrato</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>