force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_numContratosArrastre__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_numContratosArrastre__c</fullName>
    <description>Num Contratos que arrastra el refinanciador</description>
    <label>Contratos arrastrados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>