force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_numeroContrato__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_numeroContrato__c</fullName>
    <label>Cod Número de contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>