force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_periodicidadRecibo__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_periodicidadRecibo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Periodicidad Recibo Catálogo</description>
    <label>Periodicidad Recibos</label>
    <referenceTo>SIREC__SIREC_obj_Catalogo__c</referenceTo>
    <relationshipLabel>Contratos (Periodicidad)</relationshipLabel>
    <relationshipName>Contratos_Periodicidad</relationshipName>
    <type>Lookup</type>
</CustomField>