force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_Relcontractual__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_Relcontractual__c</fullName>
    <description>Codigo Relación Contractual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cod Relación Contractual</label>
    <length>50</length>
    <type>Text</type>
</CustomField>