force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_RiesgoGlobalContrato__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_RiesgoGlobalContrato__c</fullName>
    <description>Codigo Riesgo Global Contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cod Riesgo Global Contrato</label>
    <length>50</length>
    <type>Text</type>
</CustomField>