force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_sitContable__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_sitContable__c</fullName>
    <label>Situación Contable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Stage 1</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Stage 2</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Stage 3</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Stage 5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>