force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_sitMorosidade__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_sitMorosidade__c</fullName>
    <description>Situación morosidad (SMOR)</description>
    <label>Situación administrativa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>000</fullName>
                <label>REGULARIZADO</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>IMPAGADO</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>PRE-CONTENCIOSO OFICINA</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>PRE-CONTENCIOSO DELEGACION GENE</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>PROCEDIMIENTO JUDICIAL</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>CANCELADO POR CONSIGNACION JUDI</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>CANCELADO POR ADJUDICACION PROP</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>CANCELADO POR FALLIDO</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>CANCELADO CON QUEBRANTO</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>CANCELADO POR ADJUDICACION TERC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>