force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_situacionContable__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_situacionContable__c</fullName>
    <description>situación contable del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cod Situación Contable</label>
    <length>250</length>
    <type>Text</type>
</CustomField>