force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_volArrastre__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_volArrastre__c</fullName>
    <label>Volumen arrastrado</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>