force-app/main/default/objects/Contract/fields/SIREC__SIREC_fld_volCura__c.field-meta.xml
<CustomField>
    <fullName>SIREC__SIREC_fld_volCura__c</fullName>
    <description>Volumen que cura el refinanciado</description>
    <label>Volumen cura</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>