force-app/main/default/objects/Contract/recordTypes/SIREC__SIREC_rt_contrato.recordType-meta.xml
<RecordType>
    <fullName>SIREC__SIREC_rt_contrato</fullName>
    <active>true</active>
    <description>contratos cargados desde SIREC</description>
    <label>Contrato</label>
</RecordType>