force-app/main/default/objects/Contract/recordTypes/SIREC__testContractRecordType.recordType-meta.xml
<RecordType>
    <fullName>SIREC__testContractRecordType</fullName>
    <active>true</active>
    <label>testContractRecordType</label>
</RecordType>